# SolSquare

./: .gitignore  LICENSE  README.md  package-lock.json
Add New Tweet Example/: index.js
Archive/NextJS/: client.ts
Backend - Solana Playground/client/: addTweet.ts  getUsers.ts  modUser.ts  transferFrom.ts
Backend - Solana Playground/src/: lib.rs
Backend/Backend Solsquare (Cargo Project)/: Cargo.toml
Backend/Backend Solsquare (Cargo Project)/src/: create_tweet.rs  instructions.rs  lib.rs  modify_tweet.rs  modify_user.rs  processor.rs  state.rs  transfer_tokens.rs
Codigo/: README.md  xsol.cidl
Codigo/client/: package-lock.json  package.json
Codigo/program/: Cargo.toml
Codigo/program_client/: app.ts  greeter.html  greeter.ts  index.js  package-lock.json
Examples/Add New Tweet Example/: index.js  package.json
Examples/Retrieve Tweets Example/: index.js
Frontend - NextJS/: .env.production  README.md  next.config.mjs  package.json  tsconfig.json
NextJS/: getTweets.ts  package.json
Retrieve Tweets Example/: index.js  package-lock.json
User Guide/: SOLSQUARE-UserGuide.docx
Vercel/: .env.local.example  .env.production  README.md  next.config.mjs  package.json
mockBONK/: metadata.json
program/: Cargo.toml
program/src/: add_tweet.rs  mod.rs
program_client/: app.ts  package.json
program_client/lib/: rpc.ts
solsquare/: Cargo.toml  README.MD
solsquare/src/: add_tweet.rs  create_tweet.rs  create_user.rs  entrypoint.rs  function.rs  funds.rs  instructions.rs  lib.rs  modify_tweet.rs  modify_user.rs  processor.rs  state.rs  (+1 more)
x_sol/: Cargo.toml
(+74 files in other folders)
