
[package]
name = "sol_square"
version = "0.0.1"
edition = "2021"
license = "unlicense"
publish = false


[dependencies]
solana-program = "=1.18.12"
borsh = "0.10.3"
toml_edit = "=0.21.0"
spl-token =  { version = "4.0.1",features = ["no-entrypoint"] }

[lib]
crate-type = ["cdylib", "lib"]
path = "src/lib.rs"
